--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -10,8 +10,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 400px;
+    max-width: 400px;
     row-gap: 2rem;
+    flex-grow: 0;
+    .toy-image {
+      width: 30px;
+      height: 30px;
+    }
 
     section {
       display: flex;
@@ -72,6 +77,7 @@
     }
     .toy-preview {
       position: relative;
+      cursor: move;
       .count-toy {
         display: block;
         width: 30px;
@@ -84,6 +90,10 @@
         font-weight: bold;
         text-align: left;
       }
+      .toy-image {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .settings ul {
@@ -91,11 +101,15 @@
     }
   }
   .result-screen {
-    width: 50%;
+    min-width: 40%;
+    max-width: 50%;
+    flex-grow: 1;
     max-height: 100vh;
+    height: auto;
     flex-shrink: 0;
     background-color: #567d30;
     position: relative;
+    overflow: hidden;
 
     &.bg {
       background-position: center;
@@ -128,13 +142,20 @@
     }
     .tree-img {
       width: 40%;
+      height: 60%;
       position: absolute;
       bottom: 5%;
       left: calc(50% - 20%);
     }
   }
 }
-
+.garland-container {
+  width: 40%;
+  height: 60%;
+  position: absolute;
+  bottom: 5%;
+  left: 30%;
+}
 #garland-block-first,
 #garland-block-second,
 #garland-block-third,
@@ -193,28 +214,28 @@
 }
 #garland-block-first {
   bottom: 10%;
-  width: 40%;
-  left: calc(30%);
+  width: 100%;
+  left: 0;
 }
 #garland-block-second {
-  bottom: 20%;
-  width: 30%;
-  left: calc(35%);
+  bottom: 25%;
+  width: 85%;
+  left: 5%;
 }
 #garland-block-third {
-  bottom: 30%;
-  width: 20%;
-  left: calc(40%);
+  bottom: 40%;
+  width: 70%;
+  left: 15%;
 }
 #garland-block-fourth {
-  bottom: 40%;
-  width: 17%;
-  left: calc(42.5%);
+  bottom: 55%;
+  width: 50%;
+  left: 25%;
 }
 #garland-block-fifth {
-  bottom: 50%;
-  width: 12%;
-  left: calc(45%);
+  bottom: 70%;
+  width: 25%;
+  left: 40%;
 }
 
 @keyframes animate_blink {
@@ -265,6 +286,7 @@
   position: absolute;
   width: 100%;
   height: 60%;
+
   li {
     position: relative;
     opacity: 1;
@@ -279,10 +301,10 @@
     animation-play-state: running, running;
 
     &:nth-child(even) {
-      margin-top: 300px;
+      margin-top: 50%;
     }
     &:nth-child(odd) {
-      margin-top: 50px;
+      margin-top: 20%;
     }
   }
 }
@@ -305,5 +327,51 @@
   }
   100% {
     transform: translateX(-120px) rotate(-0.5turn) scale3d(2, 2, 2);
+  }
+}
+
+@media (max-width: 1280px) {
+  .main {
+    .result-screen {
+      max-height: 500px;
+    }
+  }
+  #garland-block-first,
+  #garland-block-second,
+  #garland-block-third,
+  #garland-block-fourth,
+  #garland-block-fifth {
+    li {
+      width: 5px;
+      height: 5px;
+    }
+  }
+  #garland-block-first {
+    width: 100%;
+    left: 5%;
+  }
+  #garland-block-second {
+    width: 75%;
+    left: 15%;
+  }
+  #garland-block-third {
+    width: 60%;
+    left: 20%;
+  }
+  #garland-block-fourth {
+    width: 40%;
+    left: 30%;
+  }
+  #garland-block-fifth {
+    width: 25%;
+    left: 40%;
+  }
+}
+
+@media (max-width: 800px) {
+  .main {
+    .result-screen {
+      max-height: 350px;
+    }
   }
 }
