--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -34,8 +34,6 @@
       justify-content: space-evenly;
 
       li {
-        cursor: pointer;
-
         label {
           width: 100%;
           height: 100%;
@@ -149,6 +147,12 @@
       position: absolute;
       bottom: 2%;
       left: calc(50% - 225px);
+    }
+    .toy-image {
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      z-index: 999999;
     }
   }
 }
@@ -347,13 +351,11 @@
     transform: translateX(-120px) rotate(-0.5turn) scale3d(2, 2, 2);
   }
 }
-.toy-image {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  z-index: 999999;
-}
 
+#map-tree {
+  position: relative;
+  z-index: 99;
+}
 @media (max-width: 1280px) {
   .main {
     background-color: #ceb31e;
