--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -142,107 +142,110 @@
     &.bg10 {
       background-image: url("./assets/bg/10.jpg");
     }
-    .tree-img {
+    .tree-container {
       width: 450px;
       position: absolute;
       bottom: 2%;
       left: calc(50% - 225px);
-    }
-    .toy-image {
-      width: 40px;
-      height: 40px;
-      position: absolute;
-      z-index: 999999;
-    }
-  }
-}
-.garland-container {
-  width: 430px;
-  height: 640px;
-  position: absolute;
-  bottom: 5%;
-  left: calc(50% - 215px);
-}
-#garland-block-first,
-#garland-block-second,
-#garland-block-third,
-#garland-block-fourth,
-#garland-block-fifth {
-  position: absolute;
-  z-index: 77777;
-  flex-wrap: nowrap;
-  column-gap: 0;
-  row-gap: 0;
-  li {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
 
-    &:nth-child(odd) {
-      animation: animate_blink 2s infinite;
-    }
-    &:nth-child(even) {
-      animation: animate_blink 4s infinite;
-    }
-    &:nth-child(2) {
-      margin-top: 20px;
-    }
-    &:nth-child(3) {
-      margin-top: 40px;
-    }
-    &:nth-child(4) {
-      margin-top: 50px;
-    }
-    &:nth-child(5) {
-      margin-top: 60px;
-    }
-    &:nth-child(6) {
-      margin-top: 60px;
-    }
-    &:nth-child(7) {
-      margin-top: 50px;
-    }
-    &:nth-child(8) {
-      margin-top: 40px;
-    }
-    &:nth-child(9) {
-      margin-top: 30px;
-    }
-    &.color_multy {
-      animation: none;
-      &:nth-child(odd) {
-        animation: animate_blink_multy 2s infinite;
+      .map-tree {
+        position: relative;
+        z-index: 999999999999999;
       }
-      &:nth-child(even) {
-        animation: animate_blink_multy 4s infinite;
+
+      .tree-image {
+        width: 100%;
+      }
+      .toy-image {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        z-index: 999999;
+      }
+      .garland-container {
+        width: 100%;
+        height: 100%;
+
+        .garland-block {
+          position: absolute;
+          column-gap: 0;
+          row-gap: 0;
+          li {
+            position: relative;
+            z-index: 77777;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+
+            &:nth-child(odd) {
+              animation: animate_blink 2s infinite;
+            }
+            &:nth-child(even) {
+              animation: animate_blink 4s infinite;
+            }
+            &:nth-child(2) {
+              top: 20px;
+            }
+            &:nth-child(3) {
+              top: 40px;
+            }
+            &:nth-child(4) {
+              top: 50px;
+            }
+            &:nth-child(5) {
+              top: 60px;
+            }
+            &:nth-child(6) {
+              top: 60px;
+            }
+            &:nth-child(7) {
+              top: 50px;
+            }
+            &:nth-child(8) {
+              top: 40px;
+            }
+            &:nth-child(9) {
+              top: 30px;
+            }
+            &.color_multy {
+              animation: none;
+              &:nth-child(odd) {
+                animation: animate_blink_multy 2s infinite;
+              }
+              &:nth-child(even) {
+                animation: animate_blink_multy 4s infinite;
+              }
+            }
+          }
+        }
+        #garland-block-first {
+          bottom: 15%;
+          width: 100%;
+          left: 0;
+        }
+        #garland-block-second {
+          bottom: 30%;
+          width: 85%;
+          left: 5%;
+        }
+        #garland-block-third {
+          bottom: 45%;
+          width: 70%;
+          left: 15%;
+        }
+        #garland-block-fourth {
+          bottom: 65%;
+          width: 50%;
+          left: 25%;
+        }
+        #garland-block-fifth {
+          bottom: 80%;
+          width: 25%;
+          left: 40%;
+        }
       }
     }
   }
-}
-#garland-block-first {
-  bottom: 10%;
-  width: 100%;
-  left: 0;
-}
-#garland-block-second {
-  bottom: 25%;
-  width: 85%;
-  left: 5%;
-}
-#garland-block-third {
-  bottom: 40%;
-  width: 70%;
-  left: 15%;
-}
-#garland-block-fourth {
-  bottom: 55%;
-  width: 50%;
-  left: 25%;
-}
-#garland-block-fifth {
-  bottom: 70%;
-  width: 25%;
-  left: 40%;
 }
 
 @keyframes animate_blink {
@@ -288,45 +291,44 @@
     box-shadow: 0 0 10px 15px rgb(0, 0, 255, 0.2);
   }
 }
+.snow-container {
+  & > * {
+    position: absolute;
+    width: 100%;
+    height: 60%;
+    top: 0;
 
-.snowfall,
-.snowfall2,
-.snowfall3 {
-  position: absolute;
-  width: 100%;
-  height: 60%;
-  top: 0;
+    li {
+      position: relative;
+      opacity: 1;
+      filter: blur(1px);
+      width: 10%;
+      height: 10%;
+      z-index: 99999;
+      opacity: 0;
+      animation-name: snowflakes-fall, snowflakes-shake;
+      animation-duration: 9s, 9s;
+      animation-timing-function: linear, ease-in-out;
+      animation-iteration-count: infinite, infinite;
+      animation-play-state: running, running;
 
-  li {
-    position: relative;
-    opacity: 1;
-    filter: blur(1px);
-    width: 10%;
-    height: 10%;
-    z-index: 99999;
-    opacity: 0;
-    animation-name: snowflakes-fall, snowflakes-shake;
-    animation-duration: 9s, 9s;
-    animation-timing-function: linear, ease-in-out;
-    animation-iteration-count: infinite, infinite;
-    animation-play-state: running, running;
-
-    &:nth-child(even) {
-      margin-top: 40%;
-    }
-    &:nth-child(odd) {
-      margin-top: 20%;
+      &:nth-child(even) {
+        margin-top: 40%;
+      }
+      &:nth-child(odd) {
+        margin-top: 20%;
+      }
     }
   }
-}
-.snowfall2 {
-  li {
-    animation-delay: 3s;
+  .snowfall2 {
+    li {
+      animation-delay: 3s;
+    }
   }
-}
-.snowfall3 {
-  li {
-    animation-delay: 6s;
+  .snowfall3 {
+    li {
+      animation-delay: 6s;
+    }
   }
 }
 
@@ -352,10 +354,6 @@
   }
 }
 
-#map-tree {
-  position: relative;
-  z-index: 99;
-}
 @media (max-width: 1280px) {
   .main {
     background-color: #ceb31e;
