feat: add basic logic

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -15,12 +15,43 @@ h3 {
 li {
   list-style-type: none;
 }
-h2 {
+h1 {
   font-size: 3rem;
   font-style: italic;
   text-align: center;
 }
-
+h2 {
+  font-size: 2rem;
+  font-style: italic;
+  text-align: right;
+}
+input[type="radio"] {
+  display: none;
+}
+label,
+button {
+  cursor: pointer;
+  padding: 0.1rem 2rem;
+  border: 1px solid #457b9d;
+  border-radius: 5px;
+  line-height: 23px;
+  background-color: #1d355711;
+}
+label:hover,
+button:hover {
+  background-color: #1d35572d;
+}
+.header {
+  min-height: 200px;
+  padding: 1em;
+  position: relative;
+  background-color: #457b9d;
+  label,
+  button {
+    border: 1px solid #a8dadc;
+    color: #a8dadc;
+  }
+}
 a {
   color: #f1faee;
   text-decoration: none;
@@ -36,6 +67,9 @@ body {
   min-height: 100vh;
   background-color: #a8dadc;
   font-family: "Jura", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .car {
   background-color: #f1faee;
@@ -66,10 +100,7 @@ body {
 .buttons-container {
   display: flex;
   column-gap: 0.5rem;
-}
-button {
-  cursor: pointer;
-  width: 7rem;
+  align-items: center;
 }
 
 .footer {
@@ -79,12 +110,7 @@ button {
   align-items: center;
   background-color: #457b9d;
 }
-.header {
-  min-height: 200px;
-  padding: 1em;
-  position: relative;
-  background-color: #457b9d;
-}
+
 .navigation {
   position: absolute;
   display: flex;
@@ -103,4 +129,8 @@ button {
     display: flex;
     justify-content: space-between;
   }
+}
+
+input:checked + label {
+  background-color: #1d3557;
 }
