feat: add getCar

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -6,52 +6,18 @@ html {
 * {
   box-sizing: border-box;
 }
+
 ul,
 h2,
 h3 {
   padding: 0;
   margin: 0;
 }
+
 li {
   list-style-type: none;
 }
-h1 {
-  font-size: 3rem;
-  font-style: italic;
-  text-align: center;
-}
-h2 {
-  font-size: 2rem;
-  font-style: italic;
-  text-align: right;
-}
-input[type="radio"] {
-  display: none;
-}
-label,
-button {
-  cursor: pointer;
-  padding: 0.1rem 2rem;
-  border: 1px solid #457b9d;
-  border-radius: 5px;
-  line-height: 23px;
-  background-color: #1d355711;
-}
-label:hover,
-button:hover {
-  background-color: #1d35572d;
-}
-.header {
-  min-height: 200px;
-  padding: 1em;
-  position: relative;
-  background-color: #457b9d;
-  label,
-  button {
-    border: 1px solid #a8dadc;
-    color: #a8dadc;
-  }
-}
+
 a {
   color: #f1faee;
   text-decoration: none;
@@ -63,6 +29,46 @@ a:hover {
 a:active {
   color: #ceb31e;
 }
+
+h1 {
+  font-size: 3rem;
+  font-style: italic;
+  text-align: center;
+  margin-right: auto;
+}
+
+h2 {
+  font-size: 2rem;
+  font-style: italic;
+  text-align: right;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input:checked + label {
+  background-color: #1d3557;
+}
+li {
+  min-height: 30px;
+}
+label,
+button {
+  cursor: pointer;
+  display: inline-block;
+  border: 1px solid #457b9d;
+  border-radius: 5px;
+  height: 100%;
+  background-color: #1d355711;
+  padding: 0.2rem 2rem;
+}
+
+label:hover,
+button:hover {
+  background-color: #1d35572d;
+}
+
 body {
   min-height: 100vh;
   background-color: #a8dadc;
@@ -71,6 +77,58 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+
+.header {
+  min-height: 200px;
+  padding: 1em;
+  position: relative;
+  background-color: #457b9d;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  label,
+  button {
+    border: 1px solid #a8dadc;
+    color: #a8dadc;
+  }
+
+  .navigation {
+    position: absolute;
+    display: flex;
+    column-gap: 0.5rem;
+    right: 1rem;
+    top: 1rem;
+    flex-wrap: wrap;
+  }
+
+  .control-panel {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+    max-width: 685px;
+    flex-wrap: wrap;
+
+    & > * {
+      display: flex;
+      justify-content: space-between;
+      flex-grow: 1;
+    }
+
+    input[type="text"] {
+      flex-grow: 1;
+      max-width: 460px;
+    }
+
+    .create-confirm,
+    .update-confirm {
+      width: 150px;
+    }
+  }
+}
+
 .car {
   background-color: #f1faee;
   padding: 1rem;
@@ -79,28 +137,34 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-}
-.track {
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  padding: 0 1rem;
-  position: relative;
 
-  .car-pic {
-    width: 5rem;
+  &.active {
+    background-color: white;
   }
-  .banner-pic {
-    position: absolute;
-    width: 3rem;
-    right: 1rem;
+
+  .buttons-container {
+    display: flex;
+    column-gap: 0.5rem;
+    align-items: center;
+    flex-wrap: wrap;
   }
-}
-.buttons-container {
-  display: flex;
-  column-gap: 0.5rem;
-  align-items: center;
+  .track {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding: 0 1rem;
+    position: relative;
+
+    .car-pic {
+      width: 5rem;
+    }
+    .banner-pic {
+      position: absolute;
+      width: 3rem;
+      right: 1rem;
+    }
+  }
 }
 
 .footer {
@@ -111,26 +175,8 @@ body {
   background-color: #457b9d;
 }
 
-.navigation {
-  position: absolute;
-  display: flex;
-  column-gap: 0.5rem;
-  right: 1rem;
-  top: 1rem;
-}
-
-.control-panel {
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5rem;
-  column-gap: 0.5rem;
-  width: 25%;
-  & > * {
-    display: flex;
-    justify-content: space-between;
+@media (max-width: 1024px) {
+  html {
+    font-size: 14px;
   }
-}
-
-input:checked + label {
-  background-color: #1d3557;
 }
