feat: add disable attr for button

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -50,6 +50,10 @@ input[type="radio"] {
 input:checked + label {
   background-color: #1d3557;
 }
+input:disabled + label {
+  background-color: gray;
+}
+
 li {
   min-height: 30px;
 }
