--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -152,7 +152,21 @@ body {
   align-items: center;
   flex-wrap: wrap;
 }
-.cars-container {
+.race-result {
+  display: none;
+
+  &.active {
+    display: block;
+    background-color: #e63946;
+    position: absolute;
+    width: 30%;
+    left: 35%;
+    padding: 2rem;
+    text-align: center;
+    color: white;
+  }
+}
+.container {
   flex-grow: 1;
   justify-content: flex-start;
   .car {
@@ -204,6 +218,22 @@ body {
       }
     }
   }
+}
+
+table {
+  border-collapse: separate;
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+th {
+  background: #1d3557;
+  color: white;
+  padding: 10px 20px;
+}
+
+td {
+  background: #f1faee;
 }
 
 .footer {
