feat: add car pic with svg

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -82,6 +82,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  opacity: 1;
+  transition: 2s;
 }
 
 .header {
@@ -102,7 +104,8 @@ body {
     top: 1rem;
     flex-wrap: wrap;
   }
-  .cars-count {
+  .cars-count,
+  .winners-count {
     order: -1;
   }
 
@@ -155,10 +158,12 @@ body {
     background-color: #e63946;
     position: absolute;
     width: 30%;
-    left: 35%;
+    left: 40%;
+    top: 20%;
     padding: 2rem;
     text-align: center;
     color: white;
+    box-shadow: 0 100vh 0 100vh #1d355777;
   }
 }
 .container {
@@ -181,10 +186,8 @@ body {
       width: 100%;
       display: flex;
       align-items: flex-end;
-
       padding: 0 1rem;
       position: relative;
-
       .car-pic {
         width: 5rem;
         position: relative;
@@ -208,7 +211,7 @@ body {
 
       .banner-pic {
         position: absolute;
-        width: 3rem;
+        width: 4rem;
         right: 3rem;
       }
     }
@@ -220,6 +223,9 @@ table {
   text-align: center;
   width: 60%;
   margin: auto;
+  .car-pic {
+    width: 3rem;
+  }
 }
 th {
   background: #457b9d;
