feat: fix style

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 html {
-  font-size: 20px;
+  font-size: 18px;
 }
 * {
   box-sizing: border-box;
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: italic;
   text-align: right;
 }
@@ -87,7 +87,7 @@ body {
 }
 
 .header {
-  min-height: 200px;
+  min-height: 180px;
   padding: 1em;
   position: relative;
   background-color: #457b9d;
@@ -95,6 +95,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
+  column-gap: 0.5rem;
 
   .navigation {
     position: absolute;
@@ -157,13 +158,13 @@ body {
     display: block;
     background-color: #e63946;
     position: absolute;
-    width: 30%;
-    left: 40%;
-    top: 20%;
-    padding: 2rem;
+    width: 100%;
+    left: 0;
+    top: 30%;
+    padding: 5rem;
     text-align: center;
     color: white;
-    box-shadow: 0 100vh 0 100vh #1d355777;
+    font-size: 2rem;
   }
 }
 .container {
@@ -174,12 +175,18 @@ body {
     padding: 1rem;
     border-bottom: 3px dashed #457b9d;
     display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+    row-gap: 0.5rem;
     width: 100%;
+    min-height: 100px;
+    align-items: center;
 
     &.active {
       background-color: white;
+    }
+    h3 {
+      width: 300px;
     }
 
     .track {
@@ -188,10 +195,18 @@ body {
       align-items: flex-end;
       padding: 0 1rem;
       position: relative;
+      height: 20px;
+
+      .banner-pic {
+        position: absolute;
+        width: 2rem;
+        right: 3rem;
+      }
       .car-pic {
-        width: 5rem;
-        position: relative;
+        width: 3rem;
+        position: absolute;
         left: 0;
+        bottom: -30px;
       }
       .car-pic-animation {
         animation-name: drive;
@@ -207,12 +222,6 @@ body {
         to {
           left: 95%;
         }
-      }
-
-      .banner-pic {
-        position: absolute;
-        width: 4rem;
-        right: 3rem;
       }
     }
   }
