--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -138,13 +138,12 @@ body {
 .main {
   padding: 0.5rem;
   display: flex;
-  flex-direction: column;
   row-gap: 1rem;
   flex-grow: 1;
-  justify-content: space-between;
-  .page-number {
-    order: -1;
-  }
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 2rem;
+  align-items: flex-end;
 }
 .buttons-container {
   display: flex;
@@ -168,7 +167,8 @@ body {
   }
 }
 .container {
-  flex-grow: 1;
+  width: 100%;
+  align-self: flex-start;
 
   .car {
     background-color: #f1faee;
