--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+
 html {
   font-size: 18px;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -23,9 +25,11 @@ a {
   text-decoration: none;
   transition: 0.5s;
 }
+
 a:hover {
   color: #1d3557;
 }
+
 a:active {
   color: #e63946;
 }
@@ -50,13 +54,22 @@ input[type="radio"] {
 input:checked + label {
   background-color: #1d3557;
 }
-input:disabled + label {
+
+input:disabled + label,
+button:disabled {
+  background-color: gray;
+  cursor: wait;
+}
+
+input:disabled + label:hover,
+button:disabled:hover {
   background-color: gray;
 }
 
 li {
   min-height: 30px;
 }
+
 label,
 button {
   cursor: pointer;
@@ -135,6 +148,7 @@ body {
     }
   }
 }
+
 .main {
   padding: 0.5rem;
   display: flex;
@@ -145,11 +159,13 @@ body {
   column-gap: 2rem;
   align-items: flex-end;
 }
+
 .buttons-container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
+
 .race-result {
   display: none;
 
@@ -166,6 +182,7 @@ body {
     font-size: 2rem;
   }
 }
+
 .container {
   width: 100%;
   align-self: flex-start;
@@ -193,14 +210,14 @@ body {
       width: 100%;
       display: flex;
       align-items: flex-end;
-      padding: 0 1rem;
+      margin: 0 3rem 0 1rem;
       position: relative;
       height: 20px;
 
       .banner-pic {
         position: absolute;
         width: 2rem;
-        right: 3rem;
+        left: calc(100% - 3rem);
       }
       .car-pic {
         width: 3rem;
@@ -220,7 +237,7 @@ body {
         }
 
         to {
-          left: 95%;
+          left: calc(100% - 3rem);
         }
       }
     }
@@ -232,10 +249,12 @@ table {
   text-align: center;
   width: 60%;
   margin: auto;
+
   .car-pic {
     width: 3rem;
   }
 }
+
 th {
   background: #457b9d;
   color: white;
@@ -258,6 +277,7 @@ td {
     padding: 10px 20px;
   }
 }
+
 .by-id:hover,
 .by-wins:hover,
 .by-time:hover {
@@ -271,19 +291,20 @@ td {
   align-items: center;
   background-color: #457b9d;
 }
+
 .downloading {
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-name: pulse;
   animation-iteration-count: infinite;
+  cursor: wait;
 }
+
 @keyframes pulse {
   0% {
-    transform: scale(0.9, 0.9);
     background-color: #e63946;
   }
 
   100% {
-    transform: scale(1, 1);
     background-color: #1d35575b;
   }
 }
