--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -71,7 +71,8 @@ li {
 }
 
 label,
-button {
+button,
+.button {
   cursor: pointer;
   display: inline-block;
   border: 1px solid white;
@@ -81,11 +82,19 @@ button {
   background-color: #1d35575b;
   padding: 0.2rem 2rem;
   margin: 0.1rem;
+  transition: 0.5s;
 }
 
 label:hover,
-button:hover {
+button:hover,
+.button:hover {
   background-color: #e63946;
+}
+
+.disabled {
+  pointer-events: none;
+  background-color: gray;
+  cursor: not-allowed;
 }
 
 body {
