refactor: page structure

--- a/async-race/src/index.scss
+++ b/async-race/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@500;700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
 html {
@@ -127,8 +127,8 @@ body {
     top: 1rem;
     flex-wrap: wrap;
   }
-  .cars-count,
-  .winners-count {
+
+  .count {
     order: -1;
   }
 
